<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="Thophy image"
        android:src="@drawable/ic_bg" />

    <TextView
        android:id="@+id/tvCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/hey_congratulations"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        tools:text="your score is 9/10"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/buttonBackground"
        android:textSize="18sp"
        android:text="FINISH"
        android:textStyle="bold" />
</LinearLayout>